fix: auth form width on small screen

--- a/src/features/auth/components/auth-form/auth-form.module.css
+++ b/src/features/auth/components/auth-form/auth-form.module.css
@@ -19,3 +19,9 @@
 .loading {
   opacity: 0.5;
 }
+
+@media (width < 768px) {
+  .form {
+    width: 100%;
+  }
+}
